test/error/iface/errHfsm3.rzy
// funcC is not an event

component
  ErrHfsm3
    slot funcA();
    slot funcB();

  implementation hfsm( One )
    
    state One
    end
    
    function funcC()
    end
    
    transition 
      One to One by funcA();
      One to One by funcB();
      One to One by funcC();
    
  end

